--- a/style/style.css
+++ b/style/style.css
@@ -3,14 +3,14 @@
     /* CSS Variables */
     
      :root {
-        --primary-color: #02B4E5;
+        --primary-color: #E51102;
         --secondary-color: #02F2E6;
         --default-margin: 16px 32px;
         --text-color: white;
         --secondary-text-color: #777;
-        --background-primary: rgb(12, 12, 12);
-        --background-secondary: rgb(24, 24, 24);
-        --background-dark: rgb(33, 33, 33);
+        --background-primary: rgb(77, 0, 0);
+        --background-secondary: rgb(123, 0, 0);
+        --background-dark: rgb(173, 0, 0);
     }
     
     @font-face {
