--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,8 @@
         --text-color: white;
         --secondary-text-color: #777;
         --background-primary: rgb(0, 0, 0);
-        --background-secondary: rgb(0, 0, 0);
-        --background-dark: rgb(15, 15, 15);
+        --background-secondary: rgb(15, 15, 15);
+        --background-dark: rgb(30, 30, 30);
     }
     
     @font-face {
@@ -242,7 +242,7 @@
         list-style: none;
         min-height: 45px;
         padding: 0;
-        background: linear-gradient(145deg, #016480 0, var(--primary-color), #02F2E6 100%);
+        background: linear-gradient(145deg, #016480 0, var(--primary-color), #000000 100%);
         border-radius: 2px;
         border: none;
         width: 100%;
