--- a/style/style.css
+++ b/style/style.css
@@ -96,8 +96,8 @@
     .navigation {
         background-color: var(--background-secondary);
         padding: 24px;
-        height: 100vh;
-        width: 300px;
+        height: 300px;
+        width: 100vw;
         position: fixed;
         transition: 0.4s;
     }
