--- a/style/style.css
+++ b/style/style.css
@@ -245,7 +245,7 @@
         background: linear-gradient(145deg, #016480 0, var(--primary-color), #000000 100%);
         border-radius: 2px;
         border: none;
-        width: 100%;
+        width: 500px;
         transition: 0.5s;
     }
     
