--- a/style/style.css
+++ b/style/style.css
@@ -14,17 +14,17 @@
     }
     
     @font-face {
-        font-family: 'Halcyon';
+        font-family: 'NGU';
         src: url('../assets/fonts/Gotham-Font/HomepageBaukasten-Book.woff');
     }
     
     @font-face {
-        font-family: 'Halcyon-header';
+        font-family: 'NGU-header';
         src: url('../assets/fonts/Gotham-Font/GothamLight.ttf');
     }
     
     @font-face {
-        font-family: 'Halcyon-apply';
+        font-family: 'NGU-apply';
         src: url('../assets/fonts/Gotham-Font/GothamMedium.ttf');
     }
     /* Common asset classes */
@@ -59,7 +59,7 @@
         width: 1300px;
         background-color: var(--background-primary);
         color: var(--text-color);
-        font-family: 'Halcyon';
+        font-family: 'NGU';
     }
     
     * {
@@ -107,7 +107,7 @@
     }
     
     .main-header {
-        font-family: 'Halcyon-header';
+        font-family: 'NGU-header';
         width: 250px;
         font-size: 36px;
         font-weight: 500;
@@ -255,7 +255,7 @@
     }
     
     .button .apply {
-        font-family: 'Halcyon';
+        font-family: 'NGU';
         font-size: 16px;
         font-weight: 700;
         letter-spacing: 1px;
