--- a/style/style.css
+++ b/style/style.css
@@ -108,7 +108,7 @@
     
     .main-header {
         font-family: 'NGU-header';
-        width: 2000px;
+        width: 1000vw;
         font-size: 36px;
         font-weight: 500;
         letter-spacing: 5px;
